--- a/themuse-adhesion.css
+++ b/themuse-adhesion.css
@@ -6,7 +6,7 @@
     border-bottom: none;
 }
 
-#mpw-adhesion-container {
+#muse_adhesion {
   position: fixed;
   bottom: 0px;
   text-align:center;
